--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
 	to{transform:rotate(360deg);}
 	}
 div{
-//opacity:0.5;
-
 text-align:center;
 position:absolute;
 animation:demo 5s infinite linear;
-color:lime;text-shadow:0px 0px 10px lawngreen,0px 0px 10px lawngreen,0px 0px 10px lawngreen,0px 0px 10px lawngreen;font-size:25px;font-weight:bold;
+color:rgba(0,255,0,1);text-shadow:0px 0px 1px black,0px 0px 10px lawngreen,0px 0px 20px lawngreen,0px 0px 20px lawngreen,0px 0px 20px lawngreen;font-size:40px;font-weight:bold;
 }
 </style>
 <body id="0" style="background:black;">
@@ -33,10 +31,10 @@ color:lime;text-shadow:0px 0px 10px lawngreen,0px 0px 10px lawngreen,0px 0px 10p
 /*use strick*/
 var width=document.body.clientWidth;console.log("Your width of screen:"+width);var n;
 if(width<1000){n=200;}
-else{n=800;};
+else{n=500;};
 var color=new Array("rgba(255,255,100,0.4)","rgba(255,200,100,0.4)","rgba(240,255,0,0.4)","rgba(255,255,173,0.4)","rgba(255,255,200,0.4)","rgba(255,238,134,0.4)","rgba(255,225,158,0.4)","rgba(100,149,237,0.4)");
-var digit=new Array("0","1","1<br>0<br>0<br>1<br>1<br>0","0<br>1<br>0<br>1<br>0<br>1<br>1","110110101001101".split("").join("<br>"),
-"1011101100110101010".split("").join("<br>"),"1011".split("").join("<br>"),"1<br>0<br>1","1<br>0<br>1<br>1<br>1","1","1","1<br>1","0","0","0<br>0")
+var digit=new Array("0<br>1","1","1<br>0<br>0<br>1<br>1<br>0","0<br>1<br>0<br>1<br>0<br>1<br>1","101001101".split("").join("<br>"),
+"1011101".split("").join("<br>"),"1011".split("").join("<br>"),"1<br>0<br>1","1<br>0<br>1<br>1<br>1","1","1<br>1<br>0","1<br>1","0<br>1<br>0","0<br>1<br>0","0<br>0")
 function choice(arr){return arr[parseInt(Math.random()*arr.length,10)]}
 const body=document.querySelector("body")
 for(var i=1;i<=n;i++){
