--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ div{
 text-align:center;
 position:absolute;
 animation:demo 5s infinite linear;
-color:rgba(0,255,0,1);text-shadow:0px 0px 1px black,0px 0px 10px lawngreen,0px 0px 20px lawngreen,0px 0px 20px lawngreen,0px 0px 20px lawngreen;font-size:40px;font-weight:bold;
+color:rgba(0,255,0,1);text-shadow:0px 0px 1px black,0px 0px 10px lawngreen,0px 0px 20px lawngreen,0px 0px 20px lawngreen,0px 0px 20px lawngreen;/*font-size:40px*/font-weight:bold;
 }
 </style>
 <body id="0" style="background:black;">
@@ -43,7 +43,8 @@ for(var i=1;i<=n;i++){
     rain.style.left+=Math.random()*body.offsetWidth+"px";
     rain.style.animationDelay=Math.random()*-10+'s';/*负值取消前摇*/
 	rain.style.animationDuration=Math.random()*5+8+'s';
-	color1=choice(color);color2=color[3];
+	if(width<1000){rain.style.fontSize="40px";}
+	else{rain.style.fontSize="30px";}
 	body.appendChild(rain);
 }
 </script>
